@@ -367,6 +367,7 @@ __fd_hook_entry(
 
 			/* And that's the last for this file descriptor. */
 			memset(fd,0,sizeof(*fd));
+			fd = NULL;
 
 			break;
 
