@@ -276,12 +276,13 @@ struct iob
 	  ((struct iob *)(f))->iob_Buffer[((struct iob *)(f))->iob_BufferPosition++] : \
 	  __fgetc((FILE *)(f)))
 
+/* Caution: this putc() variant will evaluate the 'c' parameter more than once. */
 #define __putc(c,f,m) \
 	(((((struct iob *)(f))->iob_BufferWriteBytes < ((struct iob *)(f))->iob_BufferSize)) ? \
 	  (((struct iob *)(f))->iob_Buffer[((struct iob *)(f))->iob_BufferWriteBytes++] = (c), \
 	  (((m) == IOBF_BUFFER_MODE_LINE && (c) == '\n') ? \
 	   __flush(f) : \
-	   (c))) : \
+	   ((c) & 255))) : \
 	  __fputc((c),(f),(m)))
 
 #define __putc_fully_buffered(c,f) \
@@ -289,12 +290,13 @@ struct iob
 	  (((struct iob *)(f))->iob_Buffer[((struct iob *)(f))->iob_BufferWriteBytes++] = (c)) : \
 	  __fputc((c),(f),IOBF_BUFFER_MODE_FULL))
 
+/* Caution: this putc() variant will evaluate the 'c' parameter more than once. */
 #define __putc_line_buffered(c,f) \
 	(((((struct iob *)(f))->iob_BufferWriteBytes < ((struct iob *)(f))->iob_BufferSize)) ? \
 	  (((struct iob *)(f))->iob_Buffer[((struct iob *)(f))->iob_BufferWriteBytes++] = (c), \
 	  (((c) == '\n') ? \
 	   __flush(f) : \
-	   ((c)))) : \
+	   ((c) & 255))) : \
 	  __fputc((c),(f),IOBF_BUFFER_MODE_LINE))
 
 /****************************************************************************/
